# project7

./: LICENSE  autoencoder.ipynb  classifier.ipynb  pyproject.toml
.github/workflows/: action.yml
.ipynb_checkpoints/: autoencoder-checkpoint.ipynb  classifier-checkpoint.ipynb  nn-checkpoint.py
nn/: Untitled.ipynb  __init__.py  autoencoder.ipynb  nn.py  preprocess.py
test/: test.py  test_nn.py
